[metadata]
name = graphql_query
summary = Python classes for generate of GraphQL queries.
url = https://github.com/denisart/graphql-query
long_description = file: README.md
long_description_content_type = text/markdown
license_files =
  LICENSE.txt


[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
packages = find:
install_requires =
  jinja2>=3.1, <3.2
  pydantic>=1.10, <1.11
  graphql-core>=3.2, <3.3

[options.extras_require]
test =
  pytest>=7.2, <7.3
  pytest-mock>=3.10, <3.11
  pytest-cov>=3.0, <3.1
dev =
  mypy>=0.991, <0.992
  pylint>=2.15, <2.16
  isort>=5.10, <5.11
  pylint-pydantic>=0.1, <0.2
  wheel>=0.38, <0.39
  sphinx>=5.3, <5.4
  furo>=2022.9, <2022.10


[options.packages.find]
exclude =
  examples*
  tools*
  docs*
  tests*
  venv*
  build*